syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message GetUsersRequest {}

message GetUsersResponse {
  repeated User users = 1;
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  User user = 1;
}
